Gestion des decks CRD(CREATE,READ,DELETE)

--- a/app/src/main/res/layout/activity_deck_builder.xml
+++ b/app/src/main/res/layout/activity_deck_builder.xml
@@ -4,13 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuDeckList_Activity">
+    tools:context=".DeckBuilder_Activity">
 
-    <include
-        layout="@layout/list_view_deck"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
