--- a/app/src/main/res/layout/activity_add_new_deck_.xml
+++ b/app/src/main/res/layout/activity_add_new_deck_.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuDeckList_Activity">
+    tools:context=".AddNewDeck_Activity">
 
     <include
-        layout="@layout/list_view_deck"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        layout="@layout/form_create_deck"
+        android:layout_width="323dp"
+        android:layout_height="442dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="77dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
