--- a/app/src/main/res/layout/line_deck_menu.xml
+++ b/app/src/main/res/layout/line_deck_menu.xml
@@ -1,26 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/id_lineDeck_name"
+        android:id="@+id/tv_lineDeck_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/tv_id_lineDeck_name" />
+        android:text="@string/tv_name_deck" />
 
     <TextView
-        android:id="@+id/id_lineDeck_desc"
+        android:id="@+id/tv_lineDeck_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/id_lineDeck_desc" />
+        android:text="@string/tv_desc_deck" />
 
     <Button
         android:id="@+id/bt_toModifDeck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/bt_toModifDeck" />
+        android:onClick="onClickModifyDeck"
+        android:text="@string/bt_Modify_deck" />
+
+    <ImageButton
+        android:id="@+id/bt_delDeck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:backgroundTint="#DDA00F0F"
+        android:onClick="onClickDeleteDeck"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+
 </LinearLayout>
