--- a/app/src/main/res/layout/line_carddeck_builder.xml
+++ b/app/src/main/res/layout/line_carddeck_builder.xml
@@ -5,14 +5,14 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tv_deckCard_buider_name"
+        android:id="@+id/tv_deckCard_buider_name2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/tv_deckCard_buider_cardtype"
+        android:id="@+id/tv_deckCard_buider_duplicate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -38,6 +38,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:backgroundTint="#DDA00F0F"
-        android:onClick="onClickDeleteDeck"
+        android:onClick="onClickDeleteLinkCardDeck"
         app:srcCompat="@android:drawable/ic_menu_delete" />
 </LinearLayout>
