--- a/app/src/main/res/layout/line_cards_builder.xml
+++ b/app/src/main/res/layout/line_cards_builder.xml
@@ -12,7 +12,7 @@
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/tv_cards_buider_cardtype"
+        android:id="@+id/tv_cards_buider_duplicate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -33,11 +33,12 @@
         android:text="TextView" />
 
     <ImageButton
-        android:id="@+id/bt_retCards"
+        android:id="@+id/bt_retCards2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:backgroundTint="#DDA00F0F"
-        android:onClick="onClickDeleteDeck"
-        app:srcCompat="@android:drawable/ic_menu_delete" />
+        android:backgroundTint="@android:color/holo_green_light"
+        android:onClick="onClickAddCardToDeck"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
 </LinearLayout>
