--- a/app/src/main/res/layout/line_carddeck_builder.xml
+++ b/app/src/main/res/layout/line_carddeck_builder.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/id_iv_list_card_in_deck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_launcher_background" />
+
     <TextView
         android:id="@+id/tv_deckCard_buider_name2"
         android:layout_width="wrap_content"
