--- a/app/src/main/res/layout/activity_deck_builder.xml
+++ b/app/src/main/res/layout/activity_deck_builder.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondecranduel"
     tools:context=".DeckBuilder_Activity">
 
     <LinearLayout
@@ -11,13 +12,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView3"
+        <Button
+            android:id="@+id/bt_retour_deckBuilder2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/title_deckbuilder"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+            android:onClick="onClickRetour"
+            android:text="@string/bt_return" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -42,12 +42,13 @@
             </LinearLayout>
         </ScrollView>
 
-        <Button
-            android:id="@+id/bt_retour_deckBuilder2"
+        <TextView
+            android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="onClickRetour"
-            android:text="@string/bt_return" />
+            android:text="@string/title_deckbuilder"
+            android:textAlignment="center"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
