--- a/app/src/main/res/layout/form_menu_home.xml
+++ b/app/src/main/res/layout/form_menu_home.xml
@@ -11,6 +11,7 @@
         android:text="@string/title_menu_home"
         android:textAlignment="center"
         android:textColor="@android:color/white"
+        android:textCursorDrawable="@android:drawable/status_bar_item_background"
         android:textSize="18sp"
         android:textStyle="bold" />
 
