--- a/app/src/main/res/layout/form_sign_up.xml
+++ b/app/src/main/res/layout/form_sign_up.xml
@@ -37,6 +37,7 @@
         android:ems="10"
         android:hint="@string/ET_username"
         android:inputType="textPersonName"
+        android:textCursorDrawable="@android:drawable/status_bar_item_background"
         app:layout_constraintBottom_toTopOf="@+id/ET_password_signUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +53,7 @@
         android:hint="@string/ET_Password_Text"
         android:inputType="textPersonName"
         android:password="true"
+        android:textCursorDrawable="@android:drawable/status_bar_item_background"
         app:layout_constraintBottom_toTopOf="@+id/bt_Sign_up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
