--- a/app/src/main/res/layout/list_view_deck.xml
+++ b/app/src/main/res/layout/list_view_deck.xml
@@ -56,7 +56,7 @@
             android:layout_weight="1"
             android:clickable="true"
             android:onClick="onClickAdd"
-            app:backgroundTint="@color/design_default_color_primary"
+            app:backgroundTint="@color/colorPrimary"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@android:drawable/ic_menu_add" />
