--- a/app/src/main/res/layout/line_carddeck_builder.xml
+++ b/app/src/main/res/layout/line_carddeck_builder.xml
@@ -12,7 +12,7 @@
 
     <TextView
         android:id="@+id/tv_deckCard_buider_name2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
@@ -20,15 +20,16 @@
 
     <TextView
         android:id="@+id/tv_deckCard_buider_duplicate"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
     <TextView
         android:id="@+id/tv_deckCard_buider_atk"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
@@ -36,7 +37,7 @@
 
     <TextView
         android:id="@+id/tv_deckCard_buider_def"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
@@ -44,7 +45,7 @@
 
     <ImageButton
         android:id="@+id/bt_retCardDeck"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:backgroundTint="#DDA00F0F"
