--- a/app/src/main/res/layout/line_cards_builder.xml
+++ b/app/src/main/res/layout/line_cards_builder.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
     <TextView
@@ -43,7 +44,7 @@
         android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
     <ImageButton
-        android:id="@+id/bt_retCards2"
+        android:id="@+id/bt_addCards2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
