--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,16 +7,17 @@
     android:background="@drawable/bgduel"
     tools:context=".Game_activity">
 
-    <TextView
-        android:id="@+id/id_tv_nameIA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="44dp"
-        android:text="TextView"
-        android:textColor="@android:color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="738dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="40dp"
+        android:background="@color/common_google_signin_btn_text_dark_disabled"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/field" />
 
     <TextView
         android:id="@+id/id_tv_lifepoint_IA"
@@ -31,19 +32,31 @@
         android:id="@+id/id_tv_name_player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
         android:text="TextView"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/id_tv_lifepoint_player"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/id_tv_lifepoint_player" />
 
     <TextView
         android:id="@+id/id_tv_lifepoint_player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="47dp"
         android:layout_marginBottom="16dp"
         android:text="TextView"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/id_tv_name_player" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/id_tv_nameIA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="44dp"
+        android:text="TextView"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
