--- a/app/src/main/res/layout/game_relative_layout.xml
+++ b/app/src/main/res/layout/game_relative_layout.xml
@@ -24,7 +24,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="238dp"
         android:layout_marginTop="189dp"
+        android:backgroundTint="#D0FFFFFF"
         android:text="@string/bt_drawPhase"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +40,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="278dp"
         android:layout_marginTop="189dp"
+        android:backgroundTint="#D0FFFFFF"
         android:text="@string/bt_standbyPhase"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +57,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="318dp"
         android:layout_marginTop="189dp"
+        android:backgroundTint="#D0FFFFFF"
         android:text="@string/bt_mainPhase"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -65,8 +71,10 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="189dp"
         android:layout_marginEnd="334dp"
+        android:backgroundTint="#D0FFFFFF"
         android:onClick="onClickBP"
         android:text="@string/bt_battlePhase"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="10sp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,8 +86,10 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="189dp"
         android:layout_marginEnd="292dp"
+        android:backgroundTint="#D0FFFFFF"
         android:onClick="onClickMP2"
         android:text="@string/bt_mainPhase2"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="10sp" />
 
     <Button
@@ -90,8 +100,10 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="189dp"
         android:layout_marginEnd="252dp"
+        android:backgroundTint="#D0FFFFFF"
         android:onClick="onClickEP"
         android:text="@string/bt_endPhase"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="10sp" />
 
     <ImageView
