--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <item
         android:id="@+id/navigation_home"
+        android:icon="@android:drawable/ic_menu_view"
         android:title="@string/nav_home" />
 
     <item
         android:id="@+id/navigation_party"
+        android:icon="@android:drawable/ic_menu_slideshow"
         android:title="@string/nav_party" />
 
     <item
         android:id="@+id/navigation_deck"
+        android:icon="@android:drawable/ic_menu_always_landscape_portrait"
         android:title="@string/nav_deck" />
 
     <item
         android:id="@+id/navigation_setting"
+        android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/nav_setting" />
 </menu>
